@@ -1,4 +1,4 @@
 <*>: pkg_sexplib
-<*.ml>: camlp4o,use_pa_optcomp
+<*.ml>: use_optcomp_o
 <*.mli>: use_optcomp_o
 <*.cmx>:for-pack(Libs)
